rust/surrealdb-query-builder/src/statements/snapshots/surrealdb_query_builder__statements__return___tests__return_with_math-2.snap
---
source: surrealdb-query-builder/src/statements/return_.rs
expression: def.fine_tune_params()
---
DEFINE FIELD average_sales ON TABLE metrics VALUE $value OR {
LET $sales = $_param_00000001;

LET $total = math::sum($sales);

LET $count = count($sales);

RETURN ($total / $count);
};
