rust/surrealdb-query-builder/src/statements/snapshots/surrealdb_query_builder__statements__return___tests__return_with_math.snap
---
source: surrealdb-query-builder/src/statements/return_.rs
expression: def.to_raw()
---
DEFINE FIELD average_sales ON TABLE metrics VALUE $value OR {
LET $sales = (SELECT VALUE quantity FROM sales);

LET $total = math::sum($sales);

LET $count = count($sales);

RETURN ($total / $count)
};
